--- a/style.css
+++ b/style.css
@@ -11,7 +11,8 @@ body{background-color: white;
     
     h2 {color: white;
     }
-
+    h1 {font-size: 24px;}
+    
     body{font-size: 16px;}
     
     footer{background-color: #1e1e1e;padding: 10px;color: white; text-align: center;font-size: 12px;}
