--- a/style.css
+++ b/style.css
@@ -9,10 +9,10 @@ body{background-color: white;
     line-height: 2em;}
     .header{background-color: #1e1e1e;padding: 20px;margin-top: -1%;}
     
-    h2 {color: white;
-    }
+    h1#principal {font-size: 32px;}
+    h2 {color: white;}
     h1 {font-size: 24px;}
-    
+    p#footer {text-align:right;}
     body{font-size: 16px;}
     
     footer{background-color: #1e1e1e;padding: 10px;color: white; text-align: center;font-size: 12px;}
@@ -20,3 +20,4 @@ body{background-color: white;
 img {
 width: 100%;
 }
+
