--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
-body{background-color: white;
+body
+{
+    background-color: white;
     padding: 2%; 
     color: black;
     margin: 20%;
@@ -7,8 +9,10 @@ body{background-color: white;
     max-width: 1280px; 
     margin: auto; 
     line-height: 2em;}
+
     .header{background-color: #1e1e1e;padding: 20px;margin-top: -1%;}
     
+
     h1#principal {font-size: 32px;}
     h2 {color: white;}
     h1 {font-size: 24px;}
